<resources>
    <string name="app_name">Laundrylicious</string>
    <string name="welcome_to_laundrylicious">Welcome to Laundrylicious</string>
    <string name="circle1">circle1</string>
    <string name="circle2">circle2</string>
    <string name="logo">logo</string>
    <string name="bingkai">bingkai</string>
    <string name="no_hp_email">No.HP / Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="login">login</string>
    <string name="tidak_punya_akun">Tidak punya akun ?</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="register_pelanggan">Register pelanggan</string>
    <string name="email_address">Email address</string>
    <string name="email">email</string>
    <string name="no_handphone">No.Handphone</string>
    <string name="phone">phone</string>
    <string name="lock">lock</string>
    <string name="confirm_password">Confirm password</string>
    <string name="unlock">unlock</string>
    <string name="register">register</string>
    <string name="bg_rec">bg_rec</string>
    <string name="string_bg_rec" />
    <string name="cam">cam</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="mesin_cuci">mesin_cuci</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="pantau">Pantau</string>
    <string name="riwayat">riwayat</string>
    <string name="location">location</string>
    <string name="cart">cart</string>
    <string name="keranjang">Keranjang</string>
    <string name="setrika">Setrika</string>
    <string name="laundry">Laundry</string>
    <string name="tambah">tambah</string>
    <string name="next">next</string>
    <string name="welcome">Welcome,</string>
    <string name="day">Monday,</string>
    <string name="wib">WIB</string>
    <string name="title_activity_main_dashboard">MainDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tambahkan">tambahkan</string>
    <string name="simpan">simpan</string>
    <string name="kode">Kode</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="kembali_ke_login">Kembali ke Login</string>

    <!--    Splash Screen-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next2">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Laundry Licious!</string>
    <string name="slide_1_desc">Gunakan Laundry Licious , Cukup 1 hari Baju Anda Dijamin Rapih, Harum Bahkan Lebih Bagus Daripada Saat Pertama Beli.</string>

    <string name="slide_2_title">Laundry Licious!</string>
    <string name="slide_2_desc">Cucian numpuk tapi mager nyuci? Gunakan jasa kami! Cuma perlu duduk manis dan cucian kamu beres semua.</string>

    <string name="slide_3_title">Laundry Licious!</string>
    <string name="slide_3_desc">Kamu cukup duduk manis dirumah sambil nonton drakor kesayangan, masalah cucian sampe setrikaan biar kami yang kerjakan</string>

    <string name="slide_4_title">>Laundry Licious!</string>
    <string name="slide_4_desc">Kami yang akan jemput cucian kotor kamu dan anter lagi baju bersih kamu, hubungi sekarang!</string>

    <string name="play_again_desc">Bersama kami membangun generasi bangsa yang tak perlu risau soal baju kotor</string>
    <string name="play_again">Play Again</string>

    <string name="title_activity_maps">MapsActivity</string>
</resources>